# JingSpringThing

./: .babelrc  .dockerignore  .env_template  .eslintrc.js  .gitignore  Cargo.toml  Dockerfile  README.md  README.md.old  babel.config.js  cert.pem  config.yml  diff.patch  docker-compose.yml  et --hard 53e63d2  exemplarWebsocketCode.txt  generate_ssl_certs.sh  jest.config.js  jest.setup.js  jest.setup.three.js  key.pem  launch-docker.sh  nginx.conf  package.json  pnpm-lock.yaml  project.txt  rawUnitTests.txt  reorg.sh  run-tests.js  run-tests.sh  server.js  settings.test.toml  settings.toml  start_services.sh  tests.txt  vite.config.js
.github/workflows/: .eslintrc.js  ci.yml
app/: settings.toml
data/: topics.csv
data/public/: index.html  output.txt  package.json  pnpm-lock.yaml
data/public/js/: app.js  gpuUtils.js  index.js  spacemouse.js
public/: index.html
public/js/: app.js  gpuUtils.js  index.js
public/js/components/: chatManager.js  graphSimulation.js  interface.js  visualization.js  webXRVisualization.js
scrapeDateScript/: nostr.md.meta.json  requirements.txt  results.json  scrape_dates.py
spatialKnowledgeGraph/exampleSpringCode/: blender_view.py  data_fetcher.py
spatialKnowledgeGraph/models/: cluster.py  cluster_controller.py  edge.py  main.py  node.py  simulation_contoller.py  vector3.py  world.py
spatialKnowledgeGraph/pythonCode/: extractor.ipynb  nodes.json
spatialKnowledgeGraph/pythonCodeJOH/: blenderSpringLoader.py  nodeAndEdgeExtractor.py  run.sh
spatialKnowledgeGraphJOH/blenderScript/: AnimateDiff.md  Anthropic Claude.md  Automated Podcast Project.md  Coding support.md  Conspiracies.md  Gold.md  Hardware and Edge.md  Knowhere.md  Landscape.md  Lightning and Similar L2.md  NVIDIA Omniverse.md  Octave Multi Model Laboratory.md  Prompt Engineering.md  RGB.md  Segmentation and Identification.md  Semantic Web.md  Soon-Next-Later (AI futurology).md  Text to 3D and 4D.md  Transformers.md  Virtual Production.md  less_frills_working_loader_and_current_mvp.py  mondayScript.py  mondayScript10.py  mondayScript2.py  mondayScript3.py  mondayScript4.py  mondayScript5.py  mondayScript6.py  mondayScript7.py  mondayScript8.py  mondayScript9.py  multimodal.md  simulator.blend  simulator.blend1  simulator.py
spatialKnowledgeGraphJOH/loaderAndClusters/: create_json_files.py  edge.py  gemini_reboot.py  main_controller.py  main_controller2.py  main_controller3.py  main_controller4.py  main_controller_claude.py  main_controller_gpt.py  main_controller_multi.py  main_starting_to_fail.py  markdown_parser.py  node.py  requirements.txt  temporary_scene.blend  test.py  vector3.py  world.py
spatialKnowledgeGraphJOH/pythonCodeMVPloader/: blenderSpringLoader.py  nodeAndEdgeExtractor.py  nodes.json  requirements.txt
src/: app_state.rs  config.rs  generate_audio.py  generate_welcome_audio.py  lib.rs  main.rs  output.txt  websocket.rs
src/handlers/: file_handler.rs  graph_handler.rs  mod.rs  perplexity_handler.rs  ragflow_handler.rs  visualization_handler.rs  websocket_handlers.rs
src/models/: edge.rs  graph.rs  metadata.rs  mod.rs  node.rs  position_update.rs  simulation_params.rs
src/services/: file_service.rs  github_service.rs  graph_service.rs  mod.rs  openwebui_service.rs  perplexity_service.rs  ragflow_service.rs  sonata_service.rs  speech_service.rs
src/utils/: audio_processor.rs  compression.rs  fisheye.wgsl  force_calculation.wgsl  gpu_compute.rs  mod.rs  update_positions.wgsl  websocket_manager.rs  websocket_messages.rs  websocket_openai.rs
tests/: lib.rs  settings.test.toml
tests/client/: chat.test.js  chatManager.test.js  gpuUtils.test.js  graphDataManager.test.js  graphService.test.js  graphSimulation.test.js  integration.test.js  interface.test.js  ragflowService.test.js  threeGraph.test.js  threeSetup.test.js  visualization.test.js  webXRVisualization.test.js  websocketService.test.js  xrInteraction.test.js  xrSetup.test.js
tests/server/: app_state_test.rs  file_handler_test.rs  file_service_test.rs  gpu_compute_test.rs  graph_handler_test.rs  graph_service_test.rs  integration_tests.rs  metadata_test.rs  openwebui_service_test.rs  perplexity_service_test.rs  ragflow_handler_test.rs  ragflow_service_test.rs  websocket_manager_test.rs
webxr-graph/: .env.template  Dockerfile  Dockerfile.test  cert.pem  generate-cert.sh  jest.config.js  key.pem  package.json  print_file_structure.sh  server.bak  server.js  server.test.js  serverMaxDebug.js  start_docker.sh
webxr-graph/processed_data/: edges.json  graph-data.json  nodes.json
webxr-graph/processed_files/: graph-data.json
webxr-graph/public/: GraphSimulation.js  index.html  ragflow_api.js  script.js  script.js.loung  script.js.needscleanup  webgpu-utils.js
webxr-graph/tests/: GraphSimulation.test.js  chatManager.test.js  constants.test.js  graphDataManager.test.js  graphVisualizer.test.js  sceneSetup.test.js  script.test.js  server.test.js  userInterfaces.test.js  utils.test.js  xrSetup.test.js
(+424 files in other folders)
