[package]
name = "webxr-graph"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13"
actix-web = { version = "4.0", features = ["rustls"] }
actix-web-actors = "4.1"
actix-files = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
reqwest = { version = "0.11", features = ["json", "stream"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
async-trait = "0.1"
regex = "1.5"
log = "0.4"
thiserror = "1.0"
futures = "0.3"
lazy_static = "1.4"
pulldown-cmark = "0.9"
config = { version = "0.13", features = ["toml"] }
env_logger = "0.10"
once_cell = "1.17"
rustls = "0.20"
rustls-pemfile = "1.0"
sha1 = "0.10.5"
wgpu = "0.15"
bytemuck = { version = "1.12", features = ["derive"] }
futures-intrusive = "0.4"
anyhow = "1.0"
rand = "0.8"
rayon = "1.5"
bytes = "1.0"

# Sonata dependencies
sonata = { path = "src/deps/sonata" }
sonata-synth = { path = "src/deps/sonata/sonata_synth" }
sonata-piper = { path = "src/deps/sonata/sonata_piper" }

# WebSocket and async dependencies
tokio-tungstenite = "0.20"
tungstenite = { version = "0.20", features = ["tokio"] }

# Audio handling (if needed on server side)
rodio = "0.17"

[dev-dependencies]
mockall = "0.11"
tempfile = "3.2"
tokio-test = "0.4"
wiremock = "0.5"
