[package]
name = "webxr-graph"
version = "0.1.0"
edition = "2021"

[dependencies]
# Actix Framework
actix = "0.13"
actix-web = { version = "4.0", features = ["rustls"] }
actix-web-actors = "4.1"
actix-files = "0.6"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Asynchronous Runtime
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"

# HTTP Client
reqwest = { version = "0.11", features = ["json", "stream"] }

# Logging and Error Handling
log = "0.4"
env_logger = "0.10"
thiserror = "1.0"
anyhow = "1.0"

# Time and Dates
chrono = { version = "0.4", features = ["serde"] }

# Environment Configuration
dotenv = "0.15"
config = { version = "0.13", features = ["toml"] }

# Regular Expressions
regex = "1.5"

# Markdown Processing
pulldown-cmark = "0.9"

# Asynchronous Traits
async-trait = "0.1"

# Additional Utilities
futures = "0.3"
lazy_static = "1.4"
once_cell = "1.17"
rand = "0.8"
rayon = "1.5"
bytes = "1.0"

# Rustls for TLS
rustls = "0.20"
rustls-pemfile = "1.0"

# SHA1 Hashing
sha1 = "0.10.5"

# GPU Computing
wgpu = "0.15"
bytemuck = { version = "1.12", features = ["derive"] }

# Intrusive Futures
futures-intrusive = "0.4"

# WebSockets and Async Dependencies
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
tungstenite = { version = "0.20", features = ["native-tls"] }

# Audio Handling
rodio = "0.17"

# Development Dependencies
[dev-dependencies]
mockall = "0.11"
tempfile = "3.2"
tokio-test = "0.4"
wiremock = "0.5"

# Sonata Dependencies
# Ensure that each path points to a valid Cargo package with its own Cargo.toml
sonata-core = { path = "src/deps/sonata/sonata/core" }
sonata-synth = { path = "src/deps/sonata/sonata/synth" }
sonata-piper = { path = "src/deps/sonata/sonata/models/piper" }