[package]
name = "webxr-graph"
version = "0.1.0"
edition = "2021"

[dependencies]
# Actix Framework
actix = "0.13"
actix-web = { version = "4.9", features = ["rustls"] }
actix-web-actors = "4.3"
actix-files = "0.6"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Asynchronous Runtime
tokio = { version = "1.41", features = ["full"] }
tokio-stream = "0.1"

# HTTP Client and Types
reqwest = { version = "0.12", features = ["json", "stream"] }
http = "1.1"
bytestring = "1.3"

# Compression
miniz_oxide = "0.8"

# Logging and Error Handling
log = "0.4"
env_logger = "0.11"
thiserror = "1.0"
anyhow = "1.0"

# Time and Dates
chrono = { version = "0.4", features = ["serde"] }

# Environment Configuration
dotenv = "0.15"
config = { version = "0.14", features = ["toml"] }

# Regular Expressions
regex = "1.11"

# Markdown Processing
pulldown-cmark = "0.12"

# Asynchronous Traits
async-trait = "0.1"

# Additional Utilities
futures = "0.3"
lazy_static = "1.5"
once_cell = "1.20"
rand = "0.8"
rayon = "1.10"
bytes = "1.8"

# Rustls for TLS
rustls = "0.23"
rustls-pemfile = "2.2"

# SHA1 Hashing
sha1 = "0.10.6"

# GPU Computing
wgpu = "23.0"
bytemuck = { version = "1.19", features = ["derive"] }

# Intrusive Futures
futures-intrusive = "0.5"

# WebSockets and Async Dependencies
tokio-tungstenite = { version = "0.24.0", features = ["native-tls"] }
tungstenite = { version = "0.24.0", features = ["native-tls"] }

# Audio Handling
rodio = "0.19"

# URL Parsing
url = "2.5"

# Base64 Encoding/Decoding
base64 = "0.22"

# OpenAI API Client
openai-api-rs = "5.0.13"

# Development Dependencies
[dev-dependencies]
mockall = "0.13"
tempfile = "3.13"
tokio-test = "0.4"
wiremock = "0.6"
